--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "pm2 deploy ecosystem.json production"
   },
   "dependencies": {
+    "autotrack": "^0.5.0",
     "handlebars": "^4.0.5",
     "jquery": "^2.1.4"
   },
