--- a/datacenter.nginx.conf
+++ b/datacenter.nginx.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name 120.27.152.54;
+	server_name cqaso.com, www.cqaso.com;
 
 	location / {
 		root		/var/nodejs/datacenter/current/dist;
