--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autotrack": "^0.5.0",
+    "echarts": "^2.2.8",
     "handlebars": "^4.0.5",
     "jquery": "^2.1.4"
   },
